add questions, make edits to to viz

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
+  <title> The Goodreads Classics </title>
   <head>
+    <meta name="theme-color" content="#ffffff">
 
+    <link rel="icon" href="favicon.svg">
+    <link rel="mask-icon" href="mask-icon.svg" color="#000000">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     {% if site.google_analytics %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
       <script>
